# shlomo_fastapi_llm

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  models.py  schemas.py  test_main.py
